[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/resources/main_theme.theme" type="Theme" id=1]
[ext_resource path="res://src/resources/common_blue.stylebox" type="StyleBox" id=2]
[ext_resource path="res://src/scripts/menu.gd" type="Script" id=3]

[sub_resource type="Theme" id=1]
Panel/styles/panel = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_bottom = -20.0
grow_vertical = 0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlay" type="Button" parent="VBoxContainer"]
margin_right = 163.0
margin_bottom = 26.0
text = "Play"
expand_icon = true

[node name="ButtonCreditsLicense" type="Button" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 163.0
margin_bottom = 56.0
text = "Credits and License"
expand_icon = true

[node name="ButtonExit" type="Button" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 163.0
margin_bottom = 86.0
text = "Exit"
expand_icon = true

[node name="PanelPlay" type="Panel" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -551.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelCreditsLicense" type="Panel" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -551.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PanelCreditsLicense"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
text = "Made by penthyoletamine

Igasca32 font made by Ascalaphas and penthyoletamine

###############################################

MIT License

Copyright (c) 2021 penthyoletamine

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \\\"Software\\\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \\\"AS IS\\\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

###############################################

This game uses Godot Engine, available under the following license:

Copyright (c) 2007-2021 Juan Linietsky, Ariel Manzur.
Copyright (c) 2014-2021 Godot Engine contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \\\"Software\\\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \\\"AS IS\\\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

-- Godot Engine <https://godotengine.org>"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonCreditsLicense" to="." method="_on_ButtonCreditsLicense_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonExit" to="." method="_on_ButtonExit_pressed"]
